--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -1,9 +1,9 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
-
-.container {
+.search-form {
   width: 100%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8px;
+  background-color: midnightblue;
 }
