--- a/src/partials/next.html
+++ b/src/partials/next.html
@@ -1,1 +1,1 @@
-<div class="container"><button type="button" class="load-more">Load more</button></div>
+<div class="container is-hidden"><button type="button" class="load-more">Load more</button></div>
