--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,9 +1,19 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
+img {
+  box-sizing: border-box;
+}
+
 .container {
   width: 100%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
