--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,11 +1,24 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
-img {
-  box-sizing: border-box;
+body {
+  margin: 0;
+}
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-p {
-  margin: 0;
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
