--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,22 +7,24 @@
   display: grid;
   max-width: 1440px;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 240px;
-  grid-gap: 12px;
+  grid-auto-rows: 220px;
+  grid-gap: 60px 12px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .photo-card {
+  outline: 1px solid red;
   position: relative;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .gallery-image:hover {
-  transform: scale(1.03);
+  transform: scale(1.02);
 }
 
 .gallery-image {
@@ -43,8 +45,9 @@
 }
 
 .info {
+  padding: 8px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 8px;
 }
