--- a/src/partials/next.html
+++ b/src/partials/next.html
@@ -1,1 +1,3 @@
-<div class="container"><button type="button" class="load-more is-hidden">Load more</button></div>
+<div class="next-container">
+  <button type="button" class="load-more is-hidden">Load more</button>
+</div>
