--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -4,8 +4,8 @@
 }
 
 .gallery {
-  display: grid;
   max-width: 1440px;
+  display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-rows: 220px;
   grid-gap: 60px 12px;
@@ -18,15 +18,15 @@
 }
 
 .photo-card {
-  border-radius: 4px;
-  overflow: hidden;
+  // border-radius: 4px;
+  // overflow: hidden;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-.gallery-image:hover {
-  transform: scale(1.02);
-}
+// .gallery-image:hover {
+//   transform: scale(1.02);
+// }
 
 .gallery-image {
   height: 100%;
@@ -46,7 +46,7 @@
 }
 
 .info {
-  padding: 8px;
+  padding-block: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
