--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -1,10 +1,13 @@
-.search-form {
+.search-form-wrap {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: midnightblue;
+  background-color: rgb(25, 25, 112);
 }
 
 .search-form > input {
