--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,38 +7,37 @@
   max-width: 1440px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 220px;
-  grid-gap: 60px 12px;
+  grid-auto-rows: 280px;
+  grid-gap: 12px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-inline: 16px;
+  // margin-top: 20px;
+  // margin-bottom: 20px;
+  padding: 16px;
 }
 
 .photo-card {
-  // border-radius: 4px;
-  // overflow: hidden;
+  border-radius: 8px;
+  overflow: hidden;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  transition: transform var(--animation-duration) var(--timing-function);
 }
 
-// .gallery-image:hover {
-//   transform: scale(1.02);
-// }
+.photo-card:hover {
+  transform: scale(1.02);
+}
 
 .gallery-image {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  transition: transform var(--animation-duration) var(--timing-function);
 }
 
 .gallery-link {
   display: block;
-  text-decoration: none;
-  height: 100%;
+  height: 80%;
 }
 
 .gallery-link:hover {
@@ -46,7 +45,7 @@
 }
 
 .info {
-  padding-block: 8px;
+  padding: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -58,4 +57,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 4px;
 }
