--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -12,8 +12,12 @@
 
 .search-form > input {
   height: 30px;
+  border-radius: 4px;
+  border: none;
 }
 
 .search-form > button {
   height: 30px;
+  border-radius: 4px;
+  border: none;
 }
