--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -21,6 +21,15 @@ img {
   height: auto;
 }
 
+button {
+  cursor: pointer;
+  border: none;
+}
+
+input {
+  border: none;
+}
+
 .container {
   width: 100%;
   height: 50px;
