--- a/src/sass/_next.scss
+++ b/src/sass/_next.scss
@@ -12,4 +12,10 @@
   border-radius: 4px;
   background-color: rgb(53, 53, 146);
   color: #ffffff;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.load-more:is(:hover, :focus) {
+  background-color: rgb(0, 0, 255);
 }
