--- a/src/partials/next.html
+++ b/src/partials/next.html
@@ -1,3 +1,8 @@
 <div class="next-container">
-  <button type="button" class="load-more is-hidden">Load more</button>
+  <img
+    class="load-more-auto"
+    src="./images/loading.gif"
+    alt="loading"
+    width="200"
+  />
 </div>
